<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_id">5c7229e9</string>
    <string name="app_name">Bonlala</string>
    <string name="string_share_rank_txt">The %1$s th person on the entire network completed the challenge \"%2$s\"</string>
    <string name="string_share_share">Share</string>
    <string name="string_challenge_numbers">challenge numbers</string>
    <string name="string_challenge_time">challenge time</string>
    <string name="string_rope_share">Share</string>
    <string name="string_privacy_str">感谢您使用 奔啦啦 ！为保障您的权利，在使用我们的服务前，请通过《奔啦啦用户服务协议》和《奔啦啦隐私政策》了解我们对个人信息的使用情况与您所享有的相关权利。</string>
    <string name="string_practise_yoga">Yoga</string>
    <string name="string_practise_elliptical">Elliptical</string>
    <string name="string_practise_spinning">Spinning</string>
    <string name="string_practise_hiking">Hiking</string>
    <string name="string_practise_rowing">Rowing</string>
    <string name="string_practise_other">Other</string>
    <string name="string_practise_indoor_walk">Indoor walk</string>
    <string name="app_band_step_number">steps(step)</string>
    <string name="unit_speed">km/h</string>
    <string name="unit_time_per_minute">BPM</string>
    <string name="unit_minute">Minute</string>
    <string name="main_sport_sum">minutes of exercise tody</string>
    <string name="sport_dtail">Sport details</string>
    <string name="please_install_software">Please install the corresponding software</string>
    <string name="speed_remind">Speed remind</string>
    <string name="watch_step_unite_distance">km</string>
    <string name="watch_step_type_distance">Distance</string>
    <string name="watch_step_unite_calory">kcal</string>
    <string name="watch_step_type_calory">Calorie</string>
    <string name="watch_step_target_str">Step target</string>
    <string name="watch_distance_target_str">Distance target</string>
    <string name="watch_calorie_target_str">Calorie target</string>
    <string name="watch_dial_is_set">Display set</string>
    <string name="bracelet_wear">Wearing setting</string>
    <string name="watch_step_target_count">6000 Steps</string>
    <string name="watch_distance_target_count">1000m</string>
    <string name="watch_calorie_target_count">10kcal</string>
    <string name="watch_stable_version_str">Firmware Version</string>
    <string name="watch_unbind_str">Unpair</string>
    <string name="watch_stable_remind_starttime">Start time</string>
    <string name="watch_stable_remind_endtime">End time</string>
    <string name="watch_heart_rate_maxium">Maxium</string>
    <string name="watch_heart_rate_minium">Minium</string>
    <string name="watch_heart_rate_average">Average</string>
    <string name="app_protol">@string/user_agreement</string>
    <string name="app_disconnect_device">The device is not connected</string>
    <string name="app_disconnected">DisConnect</string>
    <string name="app_please_enter_the_verification_code">@string/enter_vertify</string>
    <string name="app_share_goal_dis_unit">km</string>
    <string name="app_share_goal_cal_unit">kcal</string>
    <string name="app_hr">@string/heart_rate</string>
    <string name="app_device_disconnected">DisConnect</string>
    <string name="app_bodymove_temp">Body motion amplitude</string>
    <string name="app_invalid">invalid</string>
    <string name="sleep_util">Minute</string>
    <string name="sleep_util_new">M</string>
    <string name="sleep_util_s">S</string>
    <string name="body_fat_util">kg</string>
    <string name="app_spash_name">Bonlala</string>
    <string name="app_nickname_cheak">@string/enter_nickname</string>
    <string name="app_co">Bonlala Technology (Shenzhen)Co.,Ltd. \nAll Rights Reserved</string>
    <string name="app_weight_util_single">kg</string>
    <string name="app_sleep_util_min">Minute</string>
    <string name="app_scale_unit">kg</string>
    <string name="app_syncing">Reading data</string>
    <string name="app_bluetoothadapter_turnon">ALLOW</string>
    <string name="app_bluetoothadapter_turnoff">DENY</string>
    <string name="app_device_version">V %1$s</string>
    <string name="app_scale_bmi">BMI:%1$s</string>
    <string name="press_again_exit">Click twice to exit the APP</string>
    <string name="app_rate_up">↑%1$s</string>
    <string name="app_rate_down">↓%1$s</string>
    <string name="app_bmp_recode">HeartRate record</string>
    <string name="app_time_util">%1$sH%2$sM</string>
    <string name="app_sleep_setting_remind">%1$d minute early</string>
    <string name="app_scale_sum">： </string>
    <string name="app_close">close</string>
    <string name="app_band_achieve_goal">Achieved goal%1$s%%</string>
    <string name="app_sleep_time_hour_min">%1$sH%2$sM</string>
    <string name="app_sleep_time_min">%1$sM</string>
    <string name="cont_20kg">If the weight is less than 20kg, the data will not be recorded</string>
    <string name="app_version">v%1$s</string>
    <string name="app_sleep_time_remind_title">Sleep to remind</string>
    <string name="app_sleep_time_remind_tips">Sleep time</string>
    <string name="app_not_history_data">No historical data</string>
    <string name="only_add_five_alarm">Only five alarms can be added</string>
    <string name="detection">Monitor</string>
    <string name="bmi">BMI</string>
    <string name="fatweight">Body Fat</string>
    <string name="share_friend">share to firend</string>
    <string name="hasBind">This device has been bound by another user</string>
    <string name="user_time">Time</string>
    <string name="dis_unit">km</string>
    <string name="scale_unit">points</string>
    <string name="dis_unit_number">%1$skm</string>
    <string name="sport_tips">The distance of this movement is less than 0.2km, the record will not be saved!</string>
    <string name="bmp_unit">BPM</string>
    <string name="gps_tips">Please open the GPS</string>
    <string name="app_scan_nodevice">No device was found</string>
    <string name="my_position">Sport track</string>
    <string name="select_date_error">Please select a valid date</string>
    <string name="application_keep_running">Application keep running</string>
    <string name="showContent">full</string>
    <string name="hiden">pack up</string>
    <string name="no_more">No more data</string>
    <string name="app_nolong_history_data">Sleep data less than 10 minutes, invalid data</string>
    <string name="facebook_app_id">693785877755643</string>
    <string name="fb_login_protocol_scheme">fb693785877755643</string>
    <string name="no_data">- -</string>
    <string name="app_def_setting"> - - : - -</string>
    <string name="back">Back</string>
    <string name="month1">Jan</string>
    <string name="month2">Feb</string>
    <string name="month3">Mar</string>
    <string name="month4">Apr</string>
    <string name="month5">May</string>
    <string name="month6">Jun</string>
    <string name="month7">Jul</string>
    <string name="month8">Aug</string>
    <string name="month9">Sep</string>
    <string name="month10">Oct</string>
    <string name="month11">Nov</string>
    <string name="month12">Dec</string>
    <string name="frequently_tip">Do not operate frequently</string>
    <string name="share_title">All Time Safeguard for Your Health</string>
    <string name="toolbar_data">Status</string>
    <string name="toolbar_sport">Sport</string>
    <string name="toolbar_mall">Feed</string>
    <string name="app_mine">Profile</string>
    <string name="app_device_no_data">No data</string>
    <string name="confirm">Confirm</string>
    <string name="unit_steps">steps</string>
    <string name="unit_meters">m</string>
    <string name="unit_kcal">kcal</string>
    <string name="unit_kg">Kg</string>
    <string name="weigh">Weigh</string>
    <string name="sleep">Sleep</string>
    <string name="unit_day">Day</string>
    <string name="target_completion">Target Completion</string>
    <string name="compare_previous_period">Compared with previous period</string>
    <string name="compared_to_last_time">Compared with last time</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="sport_day">Day</string>
    <string name="connect">Connect</string>
    <string name="sport_count">共运动了%1$s次</string>
    <string name="pair">Pair</string>
    <string name="paired">Paired(%1$s)</string>
    <string name="search">Search</string>
    <string name="not_pair">Not now</string>
    <string name="scale_notice">Please step on the scale and keep its screen light on</string>
    <string name="search_again">Try again</string>
    <string name="scale_found">Scale found. Please confirm the value displayed on the scale is the same as the decentralized value. Then confirm the pairing.</string>
    <string name="confirm_pairing">Confirm pair</string>
    <string name="unpair">Unpair</string>
    <string name="unpair_notice">Please confirm whether to sync data before unpairing. Direct unpair will lead to data loss.</string>
    <string name="unpair_other_device_notice">You have bound the device %1$s. please unbind the device befre binding the new device?</string>
    <string name="unpair_directly">Unpair directly</string>
    <string name="unpair_after_sync">Unpair after sync</string>
    <string name="unpair_successfully">Unpair successfully</string>
    <string name="sync_data">Syncing data...</string>
    <string name="steps">steps</string>
    <string name="last_weight">Last weight</string>
    <string name="bfr_value">BFR:%1$s</string>
    <string name="bfr">BFR(%)</string>
    <string name="time">Time</string>
    <string name="weight_KG">Weight(KG)</string>
    <string name="get_code">Get code</string>
    <string name="enter_tel">Enter phone number</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_vertify">Enter code</string>
    <string name="binding_tel">Incorrect phone number</string>
    <string name="long_press_end">Long press to end</string>
    <string name="def_know">OK</string>
    <string name="heart_limit">Limit</string>
    <string name="heart_anaerobic_exercise_dialog">Anaerobic exercise</string>
    <string name="heart_aerobic_exercise_dialog">Aerobic exercise</string>
    <string name="heart_fat_burning_exercise_dialog">Fat burning exercise</string>
    <string name="heart_warm_up">Warm up</string>
    <string name="heart_leisure">Leisure</string>
    <string name="login_tips">Only support Chinese mainland mobile phone number login</string>
    <string name="device_unbind_tips">Please unpair the phone with the device</string>
    <string name="device_unbind_content1">After unpairing, the device can be bound to other phones</string>
    <string name="device_unbind_content2">Please go to the system setting > bluetooth > and click the button > on the right of the device name to cancel the pairing</string>
    <string name="heart_data_title">Heart rate color indication</string>
    <string name="rope_start">Start</string>
    <string name="rope_end">End</string>
    <string name="sport_setting_tips">为保证Bonlala更好的记录运动数据，建议您进行如下设置</string>
    <string name="sport_setting_enable_power_tips">请勿开启[省电模式]</string>
    <string name="sport_setting_enable_power_content">如果开启了省电模式，将可能导致运动记录异常、距离不准确、轨迹点漂移问题。建议您在使用Bonlala过程中关闭省电模式</string>
    <string name="sport_setting_quick_setup">快速设置</string>
    <string name="sport_setting_battery_optimization_tips">电池优化设置</string>
    <string name="sport_setting_battery_optimization_content">由于系统的省电设置，可能会在运动记录过程中误杀进程，请将Bonlala加入电池保护名单中</string>
    <string name="sport_setting_float_tips">悬浮窗权限设置</string>
    <string name="sport_setting_float_content">由于您当前的操作系统版本会管控后台设置，可能会在运动记录过程中误杀Bonlala进程,请您开启悬浮窗权限以保证Bonlala正常运行</string>
    <string name="sport_setting_background_run_tips">后台运行设置</string>
    <string name="sport_setting_background_run_content">为避免运动记录异常、距离不准确、轨迹点漂移问题,建议您为Bonlala开启后台运行权限 </string>
</resources>