<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_black_75"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dp25"
        android:layout_marginRight="@dimen/dp25"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        android:background="@drawable/common_item_selector"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginBottom="@dimen/sp30"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/heart_data_title"
            android:textColor="@color/common_white"
            android:textSize="@dimen/sp17" />

        <bike.gymproject.viewlibray.WatchHourMinuteView
            android:id="@+id/view_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:WatchTitleSize="@dimen/sp15"
            app:WatchtextMinUnitlcolor="@color/common_white"
            app:WatchtextMincolor="@color/color_limit"
            app:Watchtexttitlecolor="@color/common_white"
            app:Watchtextvalue="@string/heart_limit"
            app:iconColor="@color/color_limit" />


        <bike.gymproject.viewlibray.WatchHourMinuteView
            android:id="@+id/view_anaerobic_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:WatchTitleSize="@dimen/sp15"
            app:WatchtextMinUnitlcolor="@color/common_white"
            app:WatchtextMincolor="@color/color_anaerobic_exercise"
            app:Watchtexttitlecolor="@color/common_white"
            app:Watchtextvalue="@string/heart_anaerobic_exercise_dialog"
            app:iconColor="@color/color_anaerobic_exercise" />

        <bike.gymproject.viewlibray.WatchHourMinuteView
            android:id="@+id/view_aerobic_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:WatchTitleSize="@dimen/sp15"
            app:WatchtextMinUnitlcolor="@color/common_white"
            app:WatchtextMincolor="@color/color_aerobic_exercise"
            app:Watchtexttitlecolor="@color/common_white"
            app:Watchtextvalue="@string/heart_aerobic_exercise_dialog"
            app:iconColor="@color/color_aerobic_exercise" />

        <bike.gymproject.viewlibray.WatchHourMinuteView
            android:id="@+id/view_fat_burning_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:WatchTitleSize="@dimen/sp15"
            app:WatchtextMinUnitlcolor="@color/common_white"
            app:WatchtextMincolor="@color/color_fat_burning_exercise"
            app:Watchtexttitlecolor="@color/common_white"
            app:Watchtextvalue="@string/heart_fat_burning_exercise_dialog"
            app:iconColor="@color/color_fat_burning_exercise" />

        <bike.gymproject.viewlibray.WatchHourMinuteView
            android:id="@+id/view_warm_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:WatchTitleSize="@dimen/sp15"
            app:WatchtextMinUnitlcolor="@color/common_white"
            app:WatchtextMincolor="@color/color_warm_up"
            app:Watchtexttitlecolor="@color/common_white"
            app:Watchtextvalue="@string/heart_warm_up"
            app:iconColor="@color/color_warm_up" />

        <bike.gymproject.viewlibray.WatchHourMinuteView
            android:id="@+id/view_leisure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:WatchTitleSize="@dimen/sp15"
            app:WatchtextMinUnitlcolor="@color/common_white"
            app:WatchtextMincolor="@color/color_leisure"
            app:Watchtexttitlecolor="@color/common_white"
            app:Watchtextvalue="@string/heart_leisure"
            app:iconColor="@color/color_leisure" />



        <Button
            android:id="@+id/btn_known"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp25"
            android:padding="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/shape_btn_bg"
            android:text="@string/def_know"
            android:textColor="@color/white"
            android:textSize="@dimen/sp17" />
    </LinearLayout>


</LinearLayout>
